# multiDAQ

./: README.md  pyproject.toml
client/: main.py
client/acquisition/: acquisition_service.py
client/communication/: acquisition_manager.py  client_command_map.py  control_manager.py  identity.py
client/communication/handlers/: acquisition_handler.py  feb_handlers.py  hv_handlers.py  rc_handlers.py  system_handlers.py
client/core/: client_runtime.py
client/hardware/: hv_interface.py  hv_service.py  hvmodbus.py  rc_interface.py
client/hardware/evproducer/: ev_service.py
client/hardware/feb/: feb_service.py
client/hardware/hv/: hv_commands.py  hv_interface.py  hv_messages.py  hv_service.py  hvmodbus.py
client/hardware/rc/: rc_commands.py  rc_interface.py  rc_messages.py  rc_service.py
client/utils/: channels.py  logger.py
common/: constants.py  message_handler.py
server/: main.py
server/acquisition/: evreceiver  evreceiver.c  receiver_service.py
server/commands/: acq_commands.py  app_commands.py  calibration_commands.py  hv_commands.py  rc_commands.py
server/communication/: acquisition_manager.py  control_manager.py
server/core/: server_state.py
server/multipmt_config_files/: config_auger251_batch_4.json
server/services/: acquisition_orchestrator.py  acquisition_service.py  calibration_orchestrator.py  channel_selection_service.py  client_command_service.py  shutdown_service.py  startup_service.py
server/utils/: channels.py  client_handling.py  json_parser.py  logger.py
server/web/: __init__.py  web_app.py
server/web/static/: app.js  (+1 more)
(+1 files in other folders)
